Word Card ready to study
Implement Again, Good, Easy button
Update Vocab's scores based on user performance
Show both, selected new and review cards
Update studied cards while studying
Reset scores to previous values and studied cards when undo button is pressed
Check studied cards before showing cards

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
         <activity android:name=".HomeScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,12 +18,12 @@
             </intent-filter>
         </activity>
 
-
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="53764c6e43da354979dd83ea8a66b960f5286efa" />
 
-        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".WordCard" />
+        <activity android:name=".Settings"></activity>
     </application>
 
 </manifest>
