--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ repositories {
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.gtatiya.flashvocab"
         minSdkVersion 23
